* Fix XSS vulnerability in get_js and get_css files
* Adding add_extrahtml() method to Ooh form elements
* Reinitialize page_controller->session variable when session is reopened
* Adding session property to apu_base_class

Version 2.1.0
==============

* Ability to define custom HTML headers in page attributes
* Fixing TYPO in name of page_controller class
* Upgrading bundled Smarty to version 3.1.33
* Adding ability to use PDO as DB abstraction layer
* Use better functions for getting random numbers for UUIDs (with PHP7)
* Fix problem of loading data-layer methods with multiple instances of CData_Layer class
* Allow to disable default functions for print html head/end
* Moving code for get list of required javascript into spearate functions

Version 2.0.0
==============
* Changes to make this working under PHP7 - broken backward compatibility of data layer methods
* Adding ability to write logs to the console
* Support for event listeners and event triggering in the page controller
* Fixing HTMLSpecialChars JS function

Version 1.0.10
==============
* Get rid of short open tags
* Fixing set timezone per user by page controler
* filter widget allow multiple selects

Version 1.0.9
=============
* Adding validate_single_action() to AJAX_validator
* Adding support for option groups to select HTML element
* Adding possibility to log to syslog

Version 1.0.8
=============
* adding possibility to set default timezone in config file
* automaticaly save info/error messages to session variable when page_cotroler::reload() is executed
  and retrieve them when page is reloaded
* it's not needed to pass errors to function action_log() anymore
* bug fix: CData_Layer::sql_format() allow float values
* apu_filter now exports filter values to smarty template

Version 1.0.7
=============
* adding few js functions for better manipulation with values of html form elements

version 1.0.6
=============
* workaround for enable/disable options of selects is active for only for IE7