@@ -2,6 +2,7 @@
 * Adding add_extrahtml() method to Ooh form elements
 * Reinitialize page_controller->session variable when session is reopened
 * Adding session property to apu_base_class
+* Adding sw_log_exception() function
 
 Version 2.1.0
 ==============
